--- a/src/core/.env
+++ b/src/core/.env
@@ -1,3 +1,9 @@
 APP_NAME="TODOアプリ"
 APP_DESCRIPTION="TODOアプリ-API"
 APP_VERSION="0.0.1"
+
+DB_USER="root"
+DB_PASSWORD="password"
+DB_HOST="localhost"
+DB_NAME="memo_app"
+DB_PORT="3306"
